--- a/trunk/Specify/help/SpecifyHelp/Workbench/ExportDataSet.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ExportDataSet.html
@@ -10,7 +10,7 @@
   <hr>
   <p>The WorkBench can export an entire  Data Set item from the Sidebar or all or partial records from an open Data Set in the Workspace.</p>
   <p>&nbsp;</p>
-  <h3><u>To Export an entire Data Set from the Sidebar:</u></h3>
+  <h3><u>Export an entire Data Set from the Sidebar:</u></h3>
   <p>The fastest way to export an entire Data Set  is to 'drag and drop' the Data Set item onto the 'Export Data Set' action in the Sidebar. This eliminates the need to choose a Data Set from a file dialog.</p>
   <p>Or, Click 'Export Data Set' in the Sidebar. The following dialog will appear listing the unopened Data Sets:</p>
   <p align="center"><img src="../images/exportDataSet.png"></p>
@@ -24,7 +24,7 @@
   <p>&nbsp;</p>
   <p>Select a location and enter a name for the new MS Excel file and click 'Save'. </p>
   <p>&nbsp;</p>
-  <h3><u>To export all or partial records from an open Data Set in the Workspace:</u></h3>
+  <h3><u>Export all or partial records from  the Workspace:</u></h3>
   <p>To export partial records, choose the records by selecting a leastone column in the desired row. To export all the records in the Data Set do not select any records. </p>
   <p>Click the <img src="../images/ExportDataSet16x16.png" width="16" height="16"> (Export Data Set) button on the Workspace Item Bar. The following dialog will appear:</p>
 <p align="center"><img src="../images/exportfilename.png" ></p>
