--- a/trunk/Specify/help/SpecifyHelp/Workbench/ExportingData.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ExportingData.html
@@ -9,6 +9,7 @@
 <h2>Exporting Data</h2>
 <hr>
 <p>The WorkBench can export an entire Data Set or select records within a Data Set by choosing Action items from both  the Sidebar and the Workspace Item Bar. The following table describes each of these export functions: </p>
+<p>&nbsp;</p>
 <table width="75%" border="0" cellspacing="1" cellpadding="6">
   <tr>
     <td width="8%"><u><strong>Button</strong></u></td>
@@ -17,7 +18,8 @@
     <td width="51%"><u><strong>Explanation </strong></u></td>
   </tr>
   <tr>
-    <td><div align="center"><img src="../images/ExportData Set16x16.png" width="16" height="16" ></div></td>
+    <td><div align="center"><img src="../images/ExportDataSet16x16.png" width="16" height="16" ></div></td>
+
     <td><a href="ExportData Set.html">Export Data Set</a></td>
     <td>Sidebar</td>
     <td><p>Choose a closed Data Set  </p>
@@ -31,7 +33,7 @@
       <p>Export the entire Data Set </p></td>
   </tr>
   <tr>
-    <td><div align="center"><img src="../images/ExportData Set16x16.png" width="16" height="16"></div></td>
+    <td><div align="center"><img src="../images/ExportDataSet16x16.png" width="16" height="16"></div></td>
     <td><a href="ExportData Set.html">Export Data Set</a></td>
     <td>Workspace</td>
     <td><p>Active Data Set only </p>
