--- a/trunk/Specify/help/SpecifyHelp/Workbench/GridEditing.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/GridEditing.html
@@ -8,7 +8,7 @@
 <h2>Grid Editing</h2>
 <hr>
 <font size="-2"><br></font>
-<p>Grid Editing  enables the Data Set to be displayed and edited much like a spreadsheet. Although very similar to most spreadsheet applicaitons (i.e. MS-Excel&#174;) it is not considered a replacement for  users who take advantage of many of their advanced features. Grid editing in the WorkBench does provide many tools that are  specific to the manipulation of collections management data. For example, it can be used to Georeference locality names and output KML files for Google Earth. </p>
+<p>Grid Editing  enables the Data Set to be displayed and edited much like a spreadsheet. Although very similar to most spreadsheet applicaitons (i.e. MS Excel) it is not considered a replacement for  users who take advantage of many of their advanced features. Grid editing in the WorkBench does provide many tools that are  specific to the manipulation of collections management data. For example, it can be used to Georeference locality names and output KML files for Google Earth. </p>
 <p>Values within a Data Set are easily manipulated using the icons in the Workspace Item Bar:</p>
 <table width="100%" border="1">
   <tr>
@@ -17,21 +17,18 @@
     <td>Adds one new row under the active row. If no rows are active a new is inserted after the last record. </td>
   </tr>
   
+  
+  <tr>
+    <td><div align="center"><img src="../images/RemoveRecord16x16.png" width="16" height="16"></div></td>
+    <td>Delete A Row(s)</td>
+    <td>Deletes the entire row</td>
   <tr>
     <td><div align="center"><img src="../images/Clear16x16.png" width="16" height="16"></div></td>
     <td>Clear Cells</td>
     <td>Clears the cells that are selected</td>
   </tr>
-  <tr>
-    <td><div align="center"><img src="../images/RemoveRecord16x16.png" width="16" height="16"></div></td>
-    <td>Delete A Row(s)</td>
-    <td>Deletes the entire row</td>
   </tr>
-  <tr>
-    <td><div align="center"><img src="../images/Configure16x16.png" alt="Carry Forward" width="16" height="16"></div></td>
-    <td>Carry Forward</td>
-    <td>Opens the 'Carry Forward' configuration dialog. See <a href="#Carry_Forward">Carry Forward</a>. </td>
-  </tr>
+  
   <tr>
     <td><div align="center"><img src="../images/map.png" alt="Map" width="16" height="16"></div></td>
     <td>Mapping</td>
@@ -48,14 +45,24 @@
     <td>Calls BioGeomancer with the current locality string to geo-reference the entry. </td>
   </tr>
   <tr>
+    <td><div align="center"><img src="../images/LatitudeLongitudeConverter16x16.png" alt="Lat/Long" width="16" height="17"></div></td>
+    <td>Convert GeoCoordinate Formats </td>
+    <td>Converts the Geocoordinate formats within the latitude1 and Longitude1 columns of a Data Set.</td>
+  </tr>
+  <tr>
     <td><div align="center"><img src="../images/ExportDataSet16x16.png" alt="Export" width="16" height="16"></div></td>
     <td>Export</td>
     <td>Exports selected rows or all the rows to an MS Excel or CSV file. </td>
   </tr>
   <tr>
     <td><div align="center"><img src="../images/ToggleImageFrame16x16.png" alt="Export" width="16" height="16"></div></td>
-    <td>Display Image  </td>
+    <td>Image Window </td>
     <td><p>Toggles the Image Window on and off. </p>    </td>
+  </tr>
+  <tr>
+    <td><div align="center"><img src="../images/Configure16x16.png" alt="Carry Forward" width="16" height="16"></div></td>
+    <td>Carry Forward</td>
+    <td>Opens the 'Carry Forward' configuration dialog. See <a href="#Carry_Forward">Carry Forward</a>. </td>
   </tr>
   <tr>
     <td><div align="center">Save</div></td>
