--- a/trunk/Specify/help/SpecifyHelp/Workbench/WorkingWithImages.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/WorkingWithImages.html
@@ -9,8 +9,8 @@
 <h2>Image Window </h2>
 <hr>
 <font size="-2"><br></font>
-<p>The Image Window displays linked images, and provides additional functionality. </p>
-<p>It is important to understand that the WorkBench does not relocate or store  image files in Data Sets. The WorkBench  creates a link to the image location. The WorkBench does create a smaller version, or thumbnail, of the image, but it is not a replacement for the original image. The original image should never be deleted or moved. The WorkBench displays the thumbnail image in the Image Window by default but the original image can be displayed by using the<strong> Image Tabs</strong>. </p>
+<p>The Image Window displays linked images, and provides additional functionality for working with the images. </p>
+<p>It is important to understand that the WorkBench does not relocate or store  image files in Data Sets. The WorkBench  creates a link to the image location. The WorkBench does create a smaller version, or thumbnail, of the image, but it is not a replacement for the original image. The original image should never be deleted or moved. The WorkBench displays the thumbnail image in the Image Window by default but the original image can be displayed by using the <a href="#imagemenu">Image Menu</a>. </p>
 <p>The WorkBench links a single image to a single record.</p>
 <h3><u><a name="ImageWindow" id="ImageWindow"></a>Image Toggle</u> </h3>
 <p>The image window is toggled on and off by clicking the <img src="../images/Image-Window-A-16x16.png" width="16" height="16"> (Image Window) button in the Workspace Item Bar. When an image window is toggled 'on' an 'Image' column in the Data Set is also toggled 'on'. This column includes an <img src="../images/Image-Window-A-16x16.png" width="16" height="16"> (image) icon in the records that are linked to an image. </p>
@@ -27,14 +27,14 @@
 <p>To link new image to a new record simply click on the  new record. The 'Link New Image' button will reappear in the Image Window. </p>
 <p><em><strong>Note:</strong></em> Do not select the ImageWindow button to link another image, it will close the Image Window as well as the Image column. </p>
 <p>&nbsp;</p>
-<h3><u>Image Tabs</u></h3>
-<p>More image controls are available in the Image Tabs.</p>
-<p>On a Macintosh the Image Window Tabs appear on the _____ bar:</p>
-<p>The following image displays the items for each Image Tab:</p>
+<h3><u><a name="imagemenu"></a>Image Menu</u></h3>
+<p>More image controls are available in the Image Menus.</p>
+<p>On a Macintosh the Image Window Menus appear on the menu bar.</p>
+<p>The following image displays the items for each Image Menu:</p>
 <p align="center"><img src="../images/imagetabs.png" alt="Image Tabs" width="648" height="461"></p>
-<p align="center" class="imgcaption">Image Tabs </p>
+<p align="center" class="imgcaption">Image Menus </p>
 <p>&nbsp;</p>
-<p>The Tab items are explained in the following table:</p>
+<p>The Menu items are defined in the following table:</p>
 <table width="75%" border="1">
   <tr>
     <td width="18%">Close</td>
@@ -50,7 +50,7 @@
   </tr>
   <tr>
     <td>Keep Window on Top </td>
-    <td>&nbsp;</td>
+    <td>Keeps  the Image Window displayed on top of the WorkBench. </td>
   </tr>
   <tr>
     <td>Clear</td>
