--- a/trunk/Specify/help/SpecifyHelp/Workbench/BasicLabel.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/BasicLabel.html
@@ -13,10 +13,11 @@
 <p>***Need to know what the fields are *** </p>
 <p>The easiest way to create the label is to 'drag and drop' a DataSet  onto  the 'Basic Label' action on the sidebar. This eliminates the need to choose a DataSet for the Report. </p>
 <p>Or, click the 'Basic Label' action. The following dialog will appear:</p>
-<p><img src="../images/choosedataset.png" alt="Choose DataSet"> </p>
+<p align="center"><img src="../images/selectafield.png" alt="Choose DataSet"> </p>
 <p>Choose a DataSet and click 'ok'. </p>
 <p>Labels will appear in the Workspace as well as several buttons for interacting with the labels. The buttons are shown in the diagram below:</p>
-<p><img src="../images/labelbuttons.png" alt="Label Buttons"></p>
+<p align="center"><img src="../images/labelbuttons.png" alt="Label Buttons"></p>
+<p align="center" class="imgcaption">Button controls for the Labels </p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp; </p>
