--- a/trunk/Specify/help/SpecifyHelp/Workbench/DataSetOverview.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/DataSetOverview.html
@@ -11,11 +11,11 @@
 <p>Data is entered, edited, organized and stored in a Data Set. </p>
 <p>Data Sets are created with different Actions depending on the Work Flow. </p>
 <p>To enter data from field notes or labels choose <a href="NewData Set.html">New Data Set</a> to create an empty Data Set. Column headings for the new Data Set are chosen from  fields within Specify 6, which ensures that any data entered into the WorkBench will import correctly into Specify 6. The column headings can  be renamed, but will still maintain a link to the original Specify field. These links are referred to as 'maps'. </p>
-<p>Data that has already been entered into either an <a href="ImportXLS.html">MS Excel</a> or <a href="ImportCSV.html">CSV</a> file can be imported into a Data Set. The WorkBench not only imports the data, but also helps map the existing column headings to fields in Specify 6. This is not only necessary for other features in the WorkBench to function properly, but also ensures that the data will upload correctly into Specify 6.The WorkBench includes an 'auto-mapping' feature that reads the import column headings and automatically maps them to any matching fields in Specify 6. Any remaining unmapped column headings can be manually mapped. The column headings can be mapped to different Specify fields later by <a href="EditMapping.html">editing the Data Set Mapping</a>. </p>
+<p>Data that has already been entered into either an <a href="ImportXLS.html">MS Excel</a> or <a href="ImportCSV.html">CSV</a> file can be imported into a Data Set. The WorkBench not only imports the data, but also helps map the existing column headings to fields in Specify 6 with an 'auto-mapping' feature that reads the import column headings and automatically maps them to any matching fields. Any remaining unmapped column headings can be manually mapped. The column headings can be mapped to different Specify fields later by <a href="EditMapping.html">editing the Data Set Mapping</a>. </p>
 <p>Data Sets display the imported column headings rather than the field names, as these are  more familiar. </p>
 <p>When data exists as a group of scanned card images or field notes, it is  best to select <a href="ImportImages.html">Import Images</a> . The WorkBench will create a new Data Set, then read the group of images and link each one to a record inside the Data Set.</p>
-<p>The WorkBench can also be used <a href="ImageWindow.html">link</a> images individually to each row within existing Data Sets. </p>
-<p>Data Sets are edited as either a <a href="GridView.html">Grid</a>, or a <a href="FormView.html">Form</a> and  each  has the following unique functionality:</p>
+<p>The WorkBench can also  <a href="ImageWindow.html">link</a> images individually to each row within an existing Data Set. </p>
+<p>Data Sets are edited as either a <a href="GridView.html">Grid</a>, or a <a href="FormView.html">Form.</a> Each  view offers unique functionality:</p>
 <table width="885" border="1">
   <tr>
     <td width="167">Grid Editing</td>
@@ -32,7 +32,7 @@
   </tr>
 </table>
 <p>All or partial data within a Data Set can be exported to an MS Excel spreadsheet using the <a href="ExportData Set.html">Export Data Set</a> action.</p>
-<p>A Data Set can be described, as well as, named as using of the <a href="Data SetProperties.html">Data Set Properties dialog. </a></p>
+<p>A Data Set can be described, as well as named  using the <a href="Data SetProperties.html">Data Set Properties dialog. </a></p>
 <p>&nbsp;</p>
 </body>
 
