--- a/trunk/Specify/help/SpecifyHelp/Workbench/DataSetProperties.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/DataSetProperties.html
@@ -9,13 +9,13 @@
 <hr>
 <font size="-2"><br></font>
 <p>Data Set Properties includes the name and description of a Data Set.  </p>
-<p>To view and/or edit the properties of a Data Set, use the right mouse button to click on a Data Set. A context menu appearswithtwo options, select 'Edit Properties' :</p>
+<p>To view and/or edit the properties of a Data Set, use the right mouse button to click on a Data Set. A  context menu will appear: </p>
 <p align="center"><img src="../images/propertiesbutton.png"></p>
-<p>The Data Set Properties dialog will appear: </p>
+<p>Click on 'Edit Properties' to display the Data Set Properties dialog:</p>
 <p align="center"><img src="../images/DataSetproperties.png"></p>
 <p align="center" class="imgcaption">Data Set Properties </p>
 <p align="left">&nbsp;</p>
-<p align="left">If a Data Set was created from an imported file, the path to the file will be shown in the 'Source File' area of the dialog. </p>
+<p align="left">If a Data Set was created from an imported file, the path to the file will display in the 'Source File' area of the dialog. </p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 </body>
