--- a/trunk/Specify/help/SpecifyHelp/Workbench/EditMapping.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/EditMapping.html
@@ -8,13 +8,14 @@
 <body>
 <h2>Edit Data Set Mapping</h2>
 <hr>
-<p>To edit the Data Set Mapping, right-button click on the Data Setand a following context menu will appear: </p>
+<p>To edit the Data Set Mapping, right-button click on the Data Set. A  context menu will appear: </p>
 <p align="center"><img src="../images/mappingbutton.png" alt="Mapping Button"></p>
-<p>Click on 'Edit Data Set Mapping'to display the Data Set Mapping Editor dialog:</p>
+<p align="center" class="imgcaption">Edit Data Set Mapping Context Menu </p>
+<p>Click on 'Edit Data Set Mapping' to display the Data Set Mapping Editor dialog:</p>
 <p align="center"><img src="../images/DataSetMappingEditor.png" alt="Data Set Mapping Editor"></p>
 <p align="center" class="imgcaption">Data Set Mapping Editor </p>
 <p>&nbsp;</p>
-<p>The buttons in the dialog enable columns to be mapped, unmapped, added, deleted and reordered . The function of each button is described below:</p>
+<p>The buttons in the dialog enable columns to be mapped, unmapped, added, deleted and reordered:</p>
 <table width="75%" border="0" cellspacing="1" cellpadding="6">
   <tr>
     <td width="8%"><img src="../images/Map16x16.png" alt="map" width="16" height="16"></td>
@@ -43,7 +44,7 @@
   <li>Click on the column to select it </li>
   <li>Click the <img src="../images/Unmap16x16.png" alt="unmap" width="16" height="16"> (unmap) button </li>
 </ol>
-<p>To add a column </p>
+<p>To add a column: </p>
 <ol>
   <li>Click on the Data Type to show the Specify fields in the 'Fields' window </li>
   <li>Click on the Specify field</li>
