--- a/trunk/Specify/help/SpecifyHelp/Workbench/ImportData.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ImportData.html
@@ -8,9 +8,9 @@
 <body>
 <h2>Import Data Overview</h2>
 <hr>
-<p>The WorkBench can easily import  data from a <a href="ImportXLS.html">MS Excel</a> file or <a href="ImportCSV.html">CSV</a> file to create a Data Set. </p>
-<p>The WorkBench not only imports the data, but also maps the existing column headings to fields in Specify 6. This is not only necessary for other features in the WorkBench to function properly, but also ensures that the data will upload correctly into Specify 6.The WorkBench includes an 'auto-mapping' feature that reads the import column headings and automatically maps them to any matching fields in Specify 6. Any remaining unmapped column headings can then be manually mapped. The column headings can be mapped to different Specify fields by <a href="EditMapping.html">editing the Data Set Mapping</a>. </p>
-<p>The Data Set will display the imported field names rather than the Schema names, as these are more familiar. </p>
+<p>The WorkBench can easily create a Data Set by importing  data from an <a href="ImportXLS.html">MS Excel</a>  or  <a href="ImportCSV.html">CSV</a> file. </p>
+<p>The WorkBench not only imports the data, but also maps the existing column headings to fields in Specify 6. This is not only necessary for other features in the WorkBench to function properly, but also ensures that the data will upload correctly into Specify 6.The WorkBench includes an 'auto-mapping' feature that reads the import column headings and automatically maps them to any matching fields. Any remaining unmapped column headings can then be manually mapped. The column headings can be mapped to different Specify fields by <a href="EditMapping.html">editing the Data Set Mapping</a>. </p>
+<p>The Data Set will display the imported field names rather than the Specify field names, as these are more familiar. </p>
 <p>If data exists on several scanned card images or field notes, it is very helpful to create a Data Set by <a href="ImportImages.html">importing the images</a>. </p>
 <p>&nbsp;</p>
 </body>
