--- a/trunk/Specify/help/SpecifyHelp/Workbench/ImportImages.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ImportImages.html
@@ -8,15 +8,15 @@
 <h2>Import  Images</h2>
 <hr>
 <p>The Import Images action creates a new Data Set,  reads in a group of images, and creates a record that links to each of the images inside the Data Set.  The linked images can be viewed while entering data into the DataSet.</p>
-<p><em>Note</em>: The 'Import Images' action is best used when entering data from scanned cards or field notes. Descriptive images can also be linked to existing Data Set records using the 'Image Toggle' button. This is described in the <a href="WorkingWithImages.html">Image Window</a> section of  Help. </p>
-<p>The WorkBench allows images in jpg, tif, png, gif and bmp formats to be linked within DataSets. </p>
+<p><em>Note</em>: The 'Import Images' action is best used when entering data from scanned cards or field notes. Single, descriptive images can also be linked to existing Data Set records using the 'Image Toggle' button. This is described in the <a href="WorkingWithImages.html">Image Window</a> section of  Help. </p>
+<p>The WorkBench links images in jpg, tif, png, gif and bmp formats. </p>
 <p>Click the &lsquo;Import  Images&rsquo; action to create a new Data Set from images. </p>
 <p>A file dialog will appear that allows multiple images to be selected. Select the images to import and click 'Open'. </p>
-<p>The following dialog gives the the choice of  copying column headings from an existing Data Set or choosing them from a list of Specify fields:</p>
+<p>The next dialog gives the the choice of  copying column headings from an existing Data Set or choosing them from a list of Specify fields:</p>
 <p align="center"><img src="../images/NewDataSet.png"></p>
 <p align="center" class="imgcaption">Data Set Column Headings </p>
-<p>To copy column headings from an existing Data Set select the 'Use an existing Data Set mapping' button and choose the Data Set from the list provided. The Data Set Properties dialog will then open to name and describe the new Data Set. </p>
-<p>To choose new column headings for the new Data Set select the 'Create new Data Set mapping' button and click 'OK'. The Data Set Mapping Editor will appear:</p>
+<p>To copy column headings from an existing Data Set, select the 'Use an existing Data Set mapping' button and choose the Data Set from the list provided. The Data Set Properties dialog will then open to name and describe the new Data Set. </p>
+<p>To choose new column headings for the new Data Set select the 'Create new Data Set mapping' button and click 'OK':</p>
 <p align="center"><img src="../images/DataSetMappingEditorClear.png" alt="Data Set Mapping Editor"></p>
 <p align="center" class="imgcaption">Data Set Mapping Editor</p>
 <p align="left">The Data Set Mapping Editor allows columns to be mapped, unmapped and reordered using the following buttons:</p>
